Memory-based history should save and restore the 'isRealCharacter' field

Apparently I didn't take a close look at the implementation detail of
memory-based history when I added the 'isRealCharacter' flag. That
missing information causes some wrong behaviors randomly when using
memory-based history.

This is a follow up of commit dc2b64d33(for BUG 188528)

BUG: 294330
BUG: 299252
FIXED-IN: 4.8.4